<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="aio_ctrl_1">LED 1</string>
    <string name="aio_ctrl_2">LED 2</string>
    <string name="aio_ctrl_3">LED 3</string>
    <string name="aio_ctrl_4">LED 4</string>
    <string name="aio_ctrl_5">LED 5</string>
    <string name="aio_ctrl_6">LED 6</string>
    <string name="aio_ctrl_7">LED 7</string>
    <string name="androidx_camera_default_config_provider">androidx.camera.camera2.Camera2Config$DefaultProvider</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">iConsole+</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="automation">Auto Pattern</string>
    <string name="blue">Blue</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bq_ss_accept">Allow</string>
    <string name="bq_ss_accept_always">Always Allow</string>
    <string name="bq_ss_adb_open">ADB is Opened</string>
    <string name="bq_ss_adb_tip1">Start the USB mode on the PC client;</string>
    <string name="bq_ss_adb_tip2">Open the Developer Mode and USB Debugging.</string>
    <string name="bq_ss_adb_tip3">Open the USB Debugging</string>
    <string name="bq_ss_adb_tip4">Connecting to PC via USB cable</string>
    <string name="bq_ss_adb_tip5">Click TRUST the computer connection</string>
    <string name="bq_ss_app_name">BQScreen Sender</string>
    <string name="bq_ss_ask_for_disconnect">Are you sure to disconnect to “%s”？</string>
    <string name="bq_ss_ask_for_disconnect2">Are you sure to disconnect ？</string>
    <string name="bq_ss_cancel">Cancel</string>
    <string name="bq_ss_cancel_cast">Cast cancel!</string>
    <string name="bq_ss_cast_to">Mirror to: %s</string>
    <string name="bq_ss_casting">Mirroring</string>
    <string name="bq_ss_code_conn">Projection code connection</string>
    <string name="bq_ss_code_hint">" "<font size="14"> Please enter the TFT screen code </font>" "</string>
    <string name="bq_ss_conn_ok">"Connect success 
 Please allow in Screen"</string>
    <string name="bq_ss_curr_network">Network： %s</string>
    <string name="bq_ss_disconn">Disconnect</string>
    <string name="bq_ss_disconnect">Disconnect</string>
    <string name="bq_ss_enable_dev">Click the button of Settings-About-Version for 8 times to open the Developer Mode.</string>
    <string name="bq_ss_end_cast">ScreenMirror Over</string>
    <string name="bq_ss_howto_cast">How to cast screen, tutorial</string>
    <string name="bq_ss_howto_cast1">How to cast screen</string>
    <string name="bq_ss_ktp_website">kuaitouping.com</string>
    <string name="bq_ss_local_name">Local name: %s</string>
    <string name="bq_ss_mic_sound">Phone microphone sound</string>
    <string name="bq_ss_my_code">My PIN code: %s</string>
    <string name="bq_ss_network_err">Fail,no network</string>
    <string name="bq_ss_not_found_tv">Nothing detected</string>
    <string name="bq_ss_not_support_op">Not support!</string>
    <string name="bq_ss_open_app">Click to open the app</string>
    <string name="bq_ss_open_app_tip">Please open [TFT Projection]</string>
    <string name="bq_ss_or_use">or use</string>
    <string name="bq_ss_perm_tips">Please allow the permission request in order to use this App</string>
    <string name="bq_ss_permissions">This app requires these permissions to be used normally, please allow</string>
    <string name="bq_ss_projection_code_connection">Projection code</string>
    <string name="bq_ss_qrcode_err">QR_code Error</string>
    <string name="bq_ss_refuse">Refuse</string>
    <string name="bq_ss_refused">Mirror request is rejected by recieve device</string>
    <string name="bq_ss_remind">Remind</string>
    <string name="bq_ss_rtc_try_end">The cloud projection experience is over</string>
    <string name="bq_ss_scan_code_cast">Scan interface QR code</string>
    <string name="bq_ss_scan_code_connection_">Scan code,</string>
    <string name="bq_ss_scan_conn">Scan code connection</string>
    <string name="bq_ss_search_conn">Search connection</string>
    <string name="bq_ss_search_tv">Detecting devices</string>
    <string name="bq_ss_searching">Detecting.....</string>
    <string name="bq_ss_sink_busy">Busy,waiting!</string>
    <string name="bq_ss_sink_offline">This receiver is not online, please re-enter</string>
    <string name="bq_ss_start_cast1">Start casting</string>
    <string name="bq_ss_stop_cast_first">Stop cast!</string>
    <string name="bq_ss_timeout">TimeOut</string>
    <string name="bq_ss_title_cast">Mirror</string>
    <string name="bq_ss_title_usb_cast">USB cast</string>
    <string name="bq_ss_title_wifi_cast">&lt;&lt; WiFi Mirror</string>
    <string name="bq_ss_try_cast">Some device is trying to mirror to current device, do you allow it？</string>
    <string name="bq_ss_wait">Casting,waiting!</string>
    <string name="bq_ss_win_url">Computer download add：</string>
    <string name="calendar">Calendar</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_file">Choose File</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com.crashlytics.android.build_id">00000000000000000000000000000000</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">"You're in control - choose what info you want to share with apps."</string>
    <string name="start">Start</string>
    <string name="strDone">Done</string>
    <string name="strGO">GO</string>
    <string name="str_aiworkout__rpe">RPE</string>
    <string name="str_aiworkout__rpe_dialog_easy">Easy</string>
    <string name="str_aiworkout__rpe_dialog_hard">Hard</string>
    <string name="str_aiworkout__rpe_dialog_normal">Normal</string>
    <string name="str_aiworkout__rpe_dialog_title">Please select RPE scale</string>
    <string name="str_custom_exercise">Set workout time</string>
    <string name="str_egravity_profile_edit__add_training_set">Add training set</string>
    <string name="str_egravity_profile_edit__exercise_name">Exercise name</string>
    <string name="str_egravity_profile_edit__input_a_description">Input a description</string>
    <string name="str_egravity_profile_edit__reps">Reps</string>
    <string name="str_egravity_profile_edit__set">Set</string>
    <string name="str_egravity_profile_edit__weight">Weight</string>
    <string name="str_rest_hr__one_minute">one minute</string>
    <string name="str_rest_hr__please_sit_and_rest_for">Please sit and rest for</string>
    <string name="str_rest_hr__testing_desc">We will calculate your rest HR for accurate workout plan.</string>
    <string name="str_stream_vidoe_list_filter_dialog__brand">Brand</string>
    <string name="str_stream_vidoe_list_filter_dialog__coach">Coach</string>
    <string name="str_stream_vidoe_list_filter_dialog__done">Done</string>
    <string name="str_stream_vidoe_list_filter_dialog__equipment">Equipment</string>
    <string name="str_stream_vidoe_list_filter_dialog__level">Level</string>
    <string name="str_stream_vidoe_list_filter_dialog__reset">Reset</string>
    <string name="str_stream_vidoe_list_filter_dialog__time">Time</string>
    <string name="str_stream_vidoe_list_filter_dialog__type">Type</string>
    <string name="str_unit_min">min</string>
    <string name="string_vo2max__exercise_1_2_times_a_week">Exercise 1-2 times a week</string>
    <string name="string_vo2max__exercise_3_5_times_a_week">Exercise 3-5 times a week</string>
    <string name="string_vo2max__exercise_6_7_times_a_week">Exercise 6-7 times a week</string>
    <string name="string_vo2max__little_exercise_or_sedentary">Little exercise or sedentary</string>
</resources>