<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="#ffeeeeee" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:textStyle="normal" android:textColor="#ff555555" android:gravity="center" android:id="@id/txv1" android:background="@android:color/white" android:layout_width="275.0dip" android:layout_height="58.0dip" android:layout_margin="10.0dip" android:text="@string/string_vo2max__little_exercise_or_sedentary" android:fontFamily="@font/dinpro_regular" />
    <TextView android:textSize="18.0sp" android:textStyle="normal" android:textColor="#ff555555" android:gravity="center" android:id="@id/txv2" android:background="@android:color/white" android:layout_width="275.0dip" android:layout_height="58.0dip" android:layout_margin="10.0dip" android:text="@string/string_vo2max__exercise_1_2_times_a_week" android:fontFamily="@font/dinpro_regular" />
    <TextView android:textSize="18.0sp" android:textStyle="normal" android:textColor="#ff555555" android:gravity="center" android:id="@id/txv3" android:background="@android:color/white" android:layout_width="275.0dip" android:layout_height="58.0dip" android:layout_margin="10.0dip" android:text="@string/string_vo2max__exercise_3_5_times_a_week" android:fontFamily="@font/dinpro_regular" />
    <TextView android:textSize="18.0sp" android:textStyle="normal" android:textColor="#ff555555" android:gravity="center" android:id="@id/txv4" android:background="@android:color/white" android:layout_width="275.0dip" android:layout_height="58.0dip" android:layout_margin="10.0dip" android:text="@string/string_vo2max__exercise_6_7_times_a_week" android:fontFamily="@font/dinpro_regular" />
</LinearLayout>