<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/topPanel" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textSize="20.0sp" android:textColor="#ff000000" android:id="@id/btnReset" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_stream_vidoe_list_filter_dialog__reset" android:textAllCaps="false" android:layout_marginStart="16.0dip" />
        <Button android:textSize="20.0sp" android:textColor="#ffff541e" android:id="@id/btnDone" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_stream_vidoe_list_filter_dialog__done" android:textAllCaps="false" android:layout_marginEnd="16.0dip" android:layout_alignParentEnd="true" />
        <View android:background="#ff979797" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_below="@id/btnDone" />
    </RelativeLayout>
    <ScrollView android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/topPanel">
        <LinearLayout android:orientation="vertical" android:id="@id/layoutRoot" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="14.0sp" android:textColor="#ff5d5d5d" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="16.0dip" android:text="@string/str_stream_vidoe_list_filter_dialog__type" android:fontFamily="@font/ff_dinpro_regular" />
            <com.google.android.flexbox.FlexboxLayout android:id="@id/layoutType" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="11.0dip" android:layout_marginEnd="11.0dip" app:alignContent="stretch" app:alignItems="stretch" app:flexWrap="wrap" />
            <TextView android:textSize="14.0sp" android:textColor="#ff5d5d5d" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="16.0dip" android:text="@string/str_stream_vidoe_list_filter_dialog__equipment" android:fontFamily="@font/ff_dinpro_regular" />
            <com.google.android.flexbox.FlexboxLayout android:id="@id/layoutEquipment" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="11.0dip" android:layout_marginEnd="11.0dip" app:alignContent="stretch" app:alignItems="stretch" app:flexWrap="wrap" />
            <TextView android:textSize="14.0sp" android:textColor="#ff5d5d5d" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="16.0dip" android:text="@string/str_stream_vidoe_list_filter_dialog__time" android:fontFamily="@font/ff_dinpro_regular" />
            <com.google.android.flexbox.FlexboxLayout android:id="@id/layoutTime" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="11.0dip" android:layout_marginEnd="11.0dip" app:alignContent="stretch" app:alignItems="stretch" app:flexWrap="wrap" />
            <TextView android:textSize="14.0sp" android:textColor="#ff5d5d5d" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="16.0dip" android:text="@string/str_stream_vidoe_list_filter_dialog__level" android:fontFamily="@font/ff_dinpro_regular" />
            <com.google.android.flexbox.FlexboxLayout android:id="@id/layoutLevel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="11.0dip" android:layout_marginEnd="11.0dip" app:alignContent="stretch" app:alignItems="stretch" app:flexWrap="wrap" />
            <TextView android:textSize="14.0sp" android:textColor="#ff5d5d5d" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="16.0dip" android:text="@string/str_stream_vidoe_list_filter_dialog__coach" android:fontFamily="@font/ff_dinpro_regular" />
            <com.google.android.flexbox.FlexboxLayout android:id="@id/layoutCoach" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="11.0dip" android:layout_marginEnd="11.0dip" app:alignContent="stretch" app:alignItems="stretch" app:flexWrap="wrap" />
            <TextView android:textSize="14.0sp" android:textColor="#ff5d5d5d" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="16.0dip" android:text="@string/str_stream_vidoe_list_filter_dialog__brand" android:fontFamily="@font/ff_dinpro_regular" />
            <com.google.android.flexbox.FlexboxLayout android:id="@id/layoutBrand" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="11.0dip" android:layout_marginEnd="11.0dip" app:alignContent="stretch" app:alignItems="stretch" app:flexWrap="wrap" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>