<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="15.0sp" android:textStyle="normal" android:textColor="#ff9b9b9b" android:gravity="end" android:id="@id/txvExerciseName" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/str_egravity_profile_edit__exercise_name" android:drawablePadding="5.0dip" android:drawableEnd="@drawable/ic_triangle_down_gray" android:fontFamily="@font/dinpro_regular" />
    <Button android:textSize="18.0sp" android:textStyle="normal" android:textColor="#ff656565" android:gravity="center" android:id="@id/btnInputDescription" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/str_egravity_profile_edit__input_a_description" android:layout_below="@id/txvExerciseName" android:drawableStart="@drawable/ic_edit_pen" android:fontFamily="@font/ff_dinpro_regular" android:paddingStart="12.0dip" android:paddingEnd="12.0dip" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" />
    <Button android:textSize="18.0sp" android:textStyle="normal" android:textColor="#ff656565" android:gravity="center" android:id="@id/btnAddTrainingSet" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/str_egravity_profile_edit__add_training_set" android:layout_below="@id/btnInputDescription" android:drawableStart="@drawable/ic_add_gray" android:fontFamily="@font/ff_dinpro_regular" android:paddingStart="12.0dip" android:paddingEnd="12.0dip" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" />
    <LinearLayout android:orientation="horizontal" android:id="@id/layoutListTitle" android:layout_width="360.0dip" android:layout_height="42.0dip" android:layout_below="@id/btnAddTrainingSet" android:layout_marginEnd="10.0dip">
        <TextView android:textSize="14.0sp" android:textColor="#ff3d3d3d" android:gravity="center" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/str_egravity_profile_edit__set" android:layout_weight="1.0" android:fontFamily="@font/ff_dinpro_regular" />
        <TextView android:textSize="14.0sp" android:textColor="#ff3d3d3d" android:gravity="center" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_margin="4.0dip" android:text="@string/str_egravity_profile_edit__reps" android:layout_weight="1.5" android:fontFamily="@font/ff_dinpro_regular" />
        <TextView android:textSize="14.0sp" android:textColor="#ff3d3d3d" android:gravity="center" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_margin="4.0dip" android:text="@string/str_egravity_profile_edit__weight" android:layout_weight="2.0" android:fontFamily="@font/ff_dinpro_regular" />
        <ImageButton android:id="@id/btnLink" android:background="@android:color/transparent" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/sel_egravity_profile_edit__btn_link" android:scaleType="fitCenter" android:layout_weight="1.0" />
        <TextView android:textSize="14.0sp" android:textColor="@color/sel_egravity_profile_edit_weight2_color" android:gravity="center" android:id="@id/txvWeight2" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_margin="4.0dip" android:text="@string/str_egravity_profile_edit__weight" android:layout_weight="2.0" android:fontFamily="@font/ff_dinpro_regular" />
        <ImageButton android:id="@id/btnCopy" android:background="@android:color/transparent" android:visibility="invisible" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/copy" android:layout_weight="1.0" />
        <ImageButton android:id="@id/btnDelete" android:background="@android:color/transparent" android:visibility="invisible" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/delete" android:layout_weight="1.0" />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView android:id="@id/rvSetList" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/layoutBottomPane" android:layout_below="@id/layoutListTitle" />
    <LinearLayout android:orientation="horizontal" android:id="@id/layoutBottomPane" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_alignParentBottom="true">
        <Button android:textSize="25.0sp" android:textStyle="normal" android:textColor="@color/white" android:id="@id/btnCancel" android:background="#fffd8964" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/cancel" android:layout_weight="1.0" android:fontFamily="@font/dinot_cond_medium" />
        <Button android:textSize="25.0sp" android:textStyle="normal" android:textColor="@color/white" android:id="@id/btnGo" android:background="@color/AppTint" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/strGO" android:layout_weight="1.0" android:fontFamily="@font/dinot_cond_medium" />
    </LinearLayout>
</RelativeLayout>